thay doi hinh anh

--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -14,7 +14,7 @@
                 <img src="https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2020%2F08%2Fnike-phantom-ft-football-boot-details-release-information-tw.jpg?w=1080&cbr=1&q=90&fit=max" class="d-block w-100" alt="..." width="1200px" height="630px">
                 </div>
                 <div class="carousel-item">
-                <img src="https://assets.goal.com/v3/assets/bltcc7a7ffd2fbf71f5/blt2d16c2fa0408ddc6/62e1556d9f23b03fe6a7e46e/Best-Nike-football-boots-2022.jpg?auto=webp&format=pjpg&width=3840&quality=60" class="d-block w-100" alt="..." width="1200px" height="630px">
+                <img src="https://giaydabongtot.com/wp-content/uploads/2022/10/giay-da-bong-san-co-nhan-tao-nike.jpg" class="d-block w-100" alt="..." width="1200px" height="630px">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
